Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,33 +148,6 @@
     // Replace this with your actual news data.
     const newsData = [
   {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
-    "answers": [
-      {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
-        "correct": true
-      },
-      {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy không làm gì cả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chạy bộ có phải môn thể thao cho người giàu?",
     "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
     "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
@@ -229,6 +202,60 @@
     ]
   },
   {
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
+    "answers": [
+      {
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
+        "correct": true
+      },
+      {
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
+        "correct": false
+      },
+      {
+        "text": "Anh ấy không làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tổng thống Putin giữ nguyên lệnh ngừng bắn một phần ở Ukraine",
+    "content": "Tổng thống Nga Vladimir Putin đã quyết định giữ nguyên lệnh ngừng bắn một phần ở Ukraine, bất chấp việc Kiev bị cáo buộc vi phạm thỏa thuận. Người phát ngôn Điện Kremlin, Dmitry Peskov, cho biết không có lệnh mới nào từ tổng thống và quân đội Nga đang thực hiện chỉ thị của ông. Trong khi đó, Ukraine bị cáo buộc đã tiến hành các cuộc tấn công vào cơ sở hạ tầng năng lượng của Nga, dẫn đến những căng thẳng giữa hai bên.",
+    "link": "https://dantri.com.vn/the-gioi/tong-thong-putin-giu-nguyen-lenh-ngung-ban-mot-phan-o-ukraine-20250324175233500.htm",
+    "cat": "the-gioi",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Tổng thống Putin có quyết định gì về lệnh ngừng bắn ở Ukraine?",
+    "answers": [
+      {
+        "text": "Ông giữ nguyên lệnh ngừng bắn một phần.",
+        "correct": true
+      },
+      {
+        "text": "Ông hủy bỏ lệnh ngừng bắn hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Ông tăng cường các cuộc tấn công vào Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Ông yêu cầu Ukraine ngừng tấn công vào Nga.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tuyên án băng nhóm mua bán người đưa sang đặc khu kinh tế Tam giác vàng",
     "content": "Ngày 24-3, Toà án nhân dân tỉnh Hà Tĩnh đã tuyên án đối với băng nhóm mua bán người, trong đó có Lê Xuân Thành và Lê Anh Tuấn, bị phạt lần lượt 14 và 9 năm tù vì đã lừa gạt hàng chục người Việt Nam đưa sang đặc khu kinh tế Tam giác vàng. Nhóm này đã lạm dụng tín nhiệm chiếm đoạt tài sản từ những nạn nhân muốn trốn khỏi khu vực này. Tổng cộng, 16 người đã bị đưa sang Lào và giao cho chủ người Trung Quốc để làm việc cưỡng bức.",
     "link": "https://tuoitre.vn/tuyen-an-bang-nhom-mua-ban-nguoi-dua-sang-dac-khu-kinh-te-tam-giac-vang-20250324171429953.htm",
@@ -251,6 +278,37 @@
       },
       {
         "text": "Nhóm người Lào",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thu hút kiều bào đóng góp xây dựng đất nước trong kỷ nguyên mới",
+    "content": "Bài viết đề cập đến các hoạt động và chương trình nhằm thu hút kiều bào đóng góp xây dựng đất nước trong kỷ nguyên mới. Ủy ban Nhà nước về người Việt Nam ở nước ngoài đã tổ chức nhiều sự kiện như Lễ phát động Ngày Tôn vinh tiếng Việt, chương trình Giỗ tổ Hùng Vương, và các chuyến thăm quân dân huyện đảo Trường Sa. Những hoạt động này không chỉ gắn kết cộng đồng kiều bào với quê hương mà còn khẳng định vai trò quan trọng của họ trong sự nghiệp phát triển đất nước.",
+    "link": "https://dantri.com.vn/the-gioi/thu-hut-kieu-bao-dong-gop-xay-dung-dat-nuoc-trong-ky-nguyen-moi-20250324173210941.htm",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những hoạt động nào đang được tổ chức để thu hút kiều bào đóng góp cho đất nước?",
+    "answers": [
+      {
+        "text": "Lễ phát động Ngày Tôn vinh tiếng Việt và chương trình Giỗ tổ Hùng Vương",
+        "correct": true
+      },
+      {
+        "text": "Hội nghị phát huy nguồn lực kiều bào",
+        "correct": false
+      },
+      {
+        "text": "Chương trình giao lưu văn hóa với kiều bào",
+        "correct": false
+      },
+      {
+        "text": "Chuyến thăm các khu di tích lịch sử",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi về tiếng Việt cho kiều bào",
         "correct": false
       }
     ]
@@ -1025,33 +1083,6 @@
     ]
   },
   {
-    "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
-    "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
-    "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao việc duy trì khoảng cách an toàn trên đường cao tốc là quan trọng?",
-    "answers": [
-      {
-        "text": "Để tránh tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ lái xe.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn trong xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mụn lưng có thể chữa khỏi không?",
     "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
     "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
@@ -1074,6 +1105,33 @@
       },
       {
         "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
+    "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
+    "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao việc duy trì khoảng cách an toàn trên đường cao tốc là quan trọng?",
+    "answers": [
+      {
+        "text": "Để tránh tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ lái xe.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn trong xe.",
         "correct": false
       }
     ]
@@ -1875,33 +1933,6 @@
     ]
   },
   {
-    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
-    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
-    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
-    "answers": [
-      {
-        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
-        "correct": true
-      },
-      {
-        "text": "Cháo thịt, cơm trắng, bánh mì",
-        "correct": false
-      },
-      {
-        "text": "Thịt bò, cá, trứng",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, snack, kẹo",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
     "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
     "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
@@ -1924,6 +1955,33 @@
       },
       {
         "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
+    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
+    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
+    "answers": [
+      {
+        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
+        "correct": true
+      },
+      {
+        "text": "Cháo thịt, cơm trắng, bánh mì",
+        "correct": false
+      },
+      {
+        "text": "Thịt bò, cá, trứng",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, snack, kẹo",
         "correct": false
       }
     ]
@@ -3637,33 +3695,6 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -3690,6 +3721,33 @@
       },
       {
         "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -3892,33 +3950,6 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -3968,6 +3999,33 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "answers": [
+      {
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "correct": true
+      },
+      {
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào đáng kể",
+        "correct": false
+      },
+      {
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
