Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,28 +81,59 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
+    "title": "Nên giữ lại tên thành phố, thị xã thuộc tỉnh thành phường khi bỏ cấp huyện",
+    "content": "Bài viết đề xuất rằng nên giữ lại tên của các thành phố, thị xã thuộc tỉnh khi chuyển đổi thành phường sau khi bỏ cấp huyện. Các chuyên gia cho rằng việc giữ tên cũ sẽ giúp duy trì bản sắc văn hóa và lịch sử của địa phương. Họ cũng nhấn mạnh tầm quan trọng của việc sắp xếp lại mô hình chính quyền địa phương để phù hợp với phát triển kinh tế xã hội. Việc này cần được nghiên cứu kỹ lưỡng để đảm bảo tính khả thi và hiệu quả quản lý.",
+    "link": "https://tuoitre.vn/nen-giu-lai-ten-thanh-pho-thi-xa-thuoc-tinh-thanh-phuong-khi-bo-cap-huyen-20250324161045622.htm",
+    "cat": "thoi-su",
     "positivity": 8,
     "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "question": "Tại sao nên giữ lại tên thành phố khi bỏ cấp huyện?",
     "answers": [
       {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "text": "Để duy trì bản sắc văn hóa và lịch sử địa phương.",
         "correct": true
       },
       {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "text": "Để dễ dàng quản lý các phường mới.",
         "correct": false
       },
       {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "text": "Để tạo điều kiện cho phát triển kinh tế.",
         "correct": false
       },
       {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "text": "Không cần thiết phải giữ lại tên cũ.",
+        "correct": false
+      },
+      {
+        "text": "Để tránh sự thay đổi trong quản lý hành chính.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
+    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
+    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
+    "answers": [
+      {
+        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
+        "correct": false
+      },
+      {
+        "text": "Vì phim không đạt được rating cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh không hợp với vai diễn.",
         "correct": false
       }
     ]
@@ -130,6 +161,33 @@
       },
       {
         "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
         "correct": false
       }
     ]
@@ -1866,33 +1924,6 @@
     ]
   },
   {
-    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
-    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
-    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
-    "answers": [
-      {
-        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
-        "correct": true
-      },
-      {
-        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
-        "correct": false
-      },
-      {
-        "text": "Vì giải chạy có nhiều runner tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
     "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
     "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
@@ -1915,6 +1946,33 @@
       },
       {
         "text": "Mì tôm, snack, kẹo",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
+    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
+    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
+    "answers": [
+      {
+        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
+        "correct": true
+      },
+      {
+        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
+        "correct": false
+      },
+      {
+        "text": "Vì giải chạy có nhiều runner tham gia.",
+        "correct": false
+      },
+      {
+        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
         "correct": false
       }
     ]
@@ -2384,60 +2442,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống nước kiềm có phòng ngừa ung thư?",
     "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
     "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
@@ -2491,6 +2495,60 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -3883,6 +3941,33 @@
     ]
   },
   {
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "answers": [
+      {
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng một cầu mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức lễ hội âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do an ninh quốc gia.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -3959,33 +4044,6 @@
       },
       {
         "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
-    "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
-    "answers": [
-      {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
-        "correct": true
-      },
-      {
-        "text": "Để xây dựng một cầu mới.",
-        "correct": false
-      },
-      {
-        "text": "Để tổ chức lễ hội âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
@@ -4419,37 +4477,6 @@
       },
       {
         "text": "13,65 tỉ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trung Quốc thắng Hàn Quốc ở giải giao hữu U22",
-    "content": "Trong trận đấu giao hữu U22 diễn ra vào chiều 23/3/2025, đội chủ nhà Trung Quốc đã giành chiến thắng 1-0 trước Hàn Quốc. Bàn thắng được ghi bởi Liu Haofan ở phút 86, giúp Trung Quốc vươn lên dẫn đầu bảng với bốn điểm. Trong khi đó, Hàn Quốc chưa có điểm nào và đứng cuối bảng sau hai lượt trận.",
-    "link": "https://vnexpress.net/trung-quoc-thang-han-quoc-o-giai-giao-huu-u22-4864872.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Trung Quốc đã thắng Hàn Quốc với tỷ số bao nhiêu trong trận giao hữu U22?",
-    "answers": [
-      {
-        "text": "1-0",
-        "correct": true
-      },
-      {
-        "text": "2-1",
-        "correct": false
-      },
-      {
-        "text": "0-0",
-        "correct": false
-      },
-      {
-        "text": "3-2",
-        "correct": false
-      },
-      {
-        "text": "1-1",
         "correct": false
       }
     ]
