--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Pedri: 'Tây Ban Nha chẳng ngán bất cứ đối thủ nào'",
+    "content": "Tiền vệ Pedri của đội tuyển Tây Ban Nha thể hiện sự tự tin sau khi đội bóng vượt qua Hà Lan ở tứ kết Nations League với chiến thắng 5-4 sau loạt luân lưu. Pedri khẳng định rằng Tây Ban Nha không sợ bất kỳ đối thủ nào và sẽ chiến đấu hết mình trong các trận đấu tiếp theo. Thủ môn Unai Simon cũng đóng vai trò quan trọng trong chiến thắng này với những pha cản phá quyết định.",
+    "link": "https://vnexpress.net/pedri-tay-ban-nha-chang-ngan-bat-cu-doi-thu-nao-4864962.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Pedri đã nói gì về sức mạnh của đội tuyển Tây Ban Nha?",
+    "answers": [
+      {
+        "text": "Tây Ban Nha không ngán bất cứ đối thủ nào.",
+        "correct": true
+      },
+      {
+        "text": "Tây Ban Nha cần cải thiện kỹ năng.",
+        "correct": false
+      },
+      {
+        "text": "Tây Ban Nha chỉ mạnh ở vòng bảng.",
+        "correct": false
+      },
+      {
+        "text": "Tây Ban Nha sợ phải gặp Pháp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bắt giám đốc lừa đảo mua bán xe Rolls Royce 8",
     "content": "Ngày 24-3, Công an TP Cần Thơ đã bắt tạm giam Nguyễn Huy Tuấn, giám đốc Công ty TNHH VOV CAR Việt Nam, vì hành vi lừa đảo chiếm đoạt tài sản. Tuấn đã nhận 6,417 tỉ đồng từ ông L.T.T dưới hình thức đặt cọc mua xe Rolls Royce Phantom 8 nhưng không thực hiện cam kết giao xe. Sau khi nhận tiền, Tuấn đã chuyển khoản số tiền này để trả nợ và chi tiêu cá nhân, gây nghi ngờ cho nạn nhân và dẫn đến việc tố giác.",
     "link": "https://tuoitre.vn/bat-giam-doc-lua-dao-mua-ban-xe-rolls-royce-8-20250324181021682.htm",
@@ -529,55 +556,28 @@
     ]
   },
   {
-    "title": "Uống nhiều trà sữa hại thận?",
-    "content": "Uống nhiều trà sữa có thể gây hại cho thận, đặc biệt là khi tiêu thụ quá nhiều đường và caffeine. Một ly trà sữa thường chứa từ 50-60g đường, vượt quá mức khuyến cáo hàng ngày, dẫn đến nguy cơ béo phì, tiểu đường và bệnh thận mạn tính. Thói quen uống trà sữa thay nước lọc cũng có thể làm tăng áp lực lên thận và gây mất nước, tăng nguy cơ hình thành sỏi thận. Do đó, nên hạn chế uống trà sữa và duy trì thói quen uống đủ nước mỗi ngày để bảo vệ sức khỏe thận.",
-    "link": "https://vnexpress.net/uong-nhieu-tra-sua-hai-than-4865228.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nhiều trà sữa có hại cho thận không?",
-    "answers": [
-      {
-        "text": "Có, uống nhiều trà sữa có thể hại thận.",
-        "correct": true
-      },
-      {
-        "text": "Không, trà sữa hoàn toàn an toàn cho thận.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trà sữa trân châu mới hại thận.",
-        "correct": false
-      },
-      {
-        "text": "Uống trà sữa giúp tăng cường chức năng thận.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
-    "positivity": 8,
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
     "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
     "answers": [
       {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
         "correct": true
       },
       {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
         "correct": false
       },
       {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
         "correct": false
       },
       {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -614,6 +614,33 @@
     ]
   },
   {
+    "title": "Uống nhiều trà sữa hại thận?",
+    "content": "Uống nhiều trà sữa có thể gây hại cho thận, đặc biệt là khi tiêu thụ quá nhiều đường và caffeine. Một ly trà sữa thường chứa từ 50-60g đường, vượt quá mức khuyến cáo hàng ngày, dẫn đến nguy cơ béo phì, tiểu đường và bệnh thận mạn tính. Thói quen uống trà sữa thay nước lọc cũng có thể làm tăng áp lực lên thận và gây mất nước, tăng nguy cơ hình thành sỏi thận. Do đó, nên hạn chế uống trà sữa và duy trì thói quen uống đủ nước mỗi ngày để bảo vệ sức khỏe thận.",
+    "link": "https://vnexpress.net/uong-nhieu-tra-sua-hai-than-4865228.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nhiều trà sữa có hại cho thận không?",
+    "answers": [
+      {
+        "text": "Có, uống nhiều trà sữa có thể hại thận.",
+        "correct": true
+      },
+      {
+        "text": "Không, trà sữa hoàn toàn an toàn cho thận.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trà sữa trân châu mới hại thận.",
+        "correct": false
+      },
+      {
+        "text": "Uống trà sữa giúp tăng cường chức năng thận.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
     "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
     "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
@@ -641,6 +668,33 @@
     ]
   },
   {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sức bật từ hệ sinh thái số liên ngành",
     "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
     "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
@@ -663,33 +717,6 @@
       },
       {
         "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
-    "answers": [
-      {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
-        "correct": true
-      },
-      {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -2944,33 +2971,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 món hỗ trợ cải thiện tiêu hóa",
     "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
     "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
@@ -3051,6 +3051,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -4921,64 +4948,6 @@
       },
       {
         "text": "6 tuần",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sĩ tử lớp 9 được tiếp sức trước kỳ thi vào THPT đầy cam go",
-    "content": "Vào chiều 23/3, hàng trăm sĩ tử lớp 9 tại Hà Nội đã tham gia sự kiện \"Nhật hồng\" tại Trường THCS Lê Lợi nhằm nhận được tư vấn và hỗ trợ trước kỳ thi vào lớp 10. Sự kiện này, thuộc dự án \"The Match\", đã diễn ra thường niên từ năm 2018 với sự tham gia của các học sinh THPT, giúp các em lớp 9 hiểu rõ hơn về cách chọn trường, sắp xếp thời gian học tập, và giảm áp lực trước kỳ thi. Qua các hoạt động tương tác và tư vấn, các sĩ tử được trang bị thêm kiến thức và kinh nghiệm từ những anh chị đi trước, hứa hẹn sẽ tiếp thêm động lực cho các em trong giai đoạn ôn thi căng thẳng.",
-    "link": "https://dantri.com.vn/giao-duc/si-tu-lop-9-duoc-tiep-suc-truoc-ky-thi-vao-thpt-day-cam-go-20250323182503566.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Sự kiện \"Nhật hồng\" diễn ra vào ngày nào và tại đâu?",
-    "answers": [
-      {
-        "text": "Ngày 23/3 tại Trường THCS Lê Lợi",
-        "correct": true
-      },
-      {
-        "text": "Ngày 24/3 tại Trường THCS Lê Lợi",
-        "correct": false
-      },
-      {
-        "text": "Ngày 23/3 tại Trường THPT Chuyên Ngoại ngữ",
-        "correct": false
-      },
-      {
-        "text": "Ngày 22/3 tại Trường THCS Lê Lợi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tổng công ty Hàng Hải Việt Nam lãi đột biến, hé lộ thu nhập dàn lãnh đạo",
-    "content": "Tổng công ty Hàng Hải Việt Nam (VIMC) vừa công bố báo cáo tài chính năm 2024 với lãi sau thuế đạt 2.629 tỉ đồng, tăng 55% so với năm trước. Doanh thu hợp nhất của công ty đạt 16.961 tỉ đồng, chủ yếu nhờ vào khoản \"lợi nhuận khác\". Thu nhập của các lãnh đạo cũng tăng mạnh, với tổng chi trả lên tới 13,65 tỉ đồng, trong đó ông Lê Anh Sơn, chủ tịch HĐQT nhận gần 1,64 tỉ đồng, tương đương 136 triệu đồng/tháng.",
-    "link": "https://tuoitre.vn/tong-cong-ty-hang-hai-viet-nam-lai-dot-bien-he-lo-thu-nhap-dan-lanh-dao-20250323175053181.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "VIMC đạt được lãi sau thuế bao nhiêu trong năm 2024?",
-    "answers": [
-      {
-        "text": "2.629 tỉ đồng",
-        "correct": true
-      },
-      {
-        "text": "1.640 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "1.353 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "16.961 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "13,65 tỉ đồng",
         "correct": false
       }
     ]
