--- a/home.html
+++ b/home.html
@@ -148,6 +148,60 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bánh mì Hawaii của ông chủ Việt kiều Mỹ",
+    "content": "Ông Vương Hoàng Minh, một Việt kiều Mỹ, đã khởi xướng mô hình bánh mì Hawaii tại Lễ hội bánh mì 2025 ở TP.HCM. Mô hình này không yêu cầu vốn đầu tư và không có rủi ro cho những người tham gia, với mục tiêu tạo việc làm và giữ gìn hương vị bánh mì truyền thống. Bánh mì Hawaii sẽ được phát triển thành chuỗi cửa hàng bán bánh mì vỉa hè, phục vụ cho học sinh và người lao động, với giá khoảng 25.000 đồng mỗi ổ.",
+    "link": "https://tuoitre.vn/banh-mi-hawaii-cua-ong-chu-viet-kieu-my-20250324183132429.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bánh mì Hawaii do ai sáng lập và có điểm gì đặc biệt?",
+    "answers": [
+      {
+        "text": "Ông Vương Hoàng Minh",
+        "correct": true
+      },
+      {
+        "text": "Một đầu bếp nổi tiếng",
+        "correct": false
+      },
+      {
+        "text": "Một công ty nước ngoài",
+        "correct": false
+      },
+      {
+        "text": "Một tổ chức phi lợi nhuận",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người dân thích thú với hàng hoa kèn hồng bên dòng sông Tiền",
+    "content": "Những ngày qua, hàng ngàn người dân đã đến bờ sông Tiền, TP Mỹ Tho, tỉnh Tiền Giang để chiêm ngưỡng vẻ đẹp của hàng hoa kèn hồng nở rộ. Đây là lần đầu tiên dãy hoa này nở tại khu vực này, khiến nhiều người dân ở Tiền Giang và Bến Tre thích thú chụp hình và chia sẻ trên mạng xã hội. Chính quyền địa phương cũng đang lên kế hoạch trồng thêm hoa kèn hồng để thu hút du khách và làm đẹp cho đô thị.",
+    "link": "https://tuoitre.vn/nguoi-dan-thich-thu-voi-hang-hoa-ken-hong-ben-dong-song-tien-2025032417361917.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao người dân lại thích thú với hàng hoa kèn hồng bên dòng sông Tiền?",
+    "answers": [
+      {
+        "text": "Vì hoa kèn hồng nở rộ và thu hút nhiều người đến chụp ảnh.",
+        "correct": true
+      },
+      {
+        "text": "Vì hoa kèn hồng có màu sắc đẹp.",
+        "correct": false
+      },
+      {
+        "text": "Vì hoa kèn hồng nở vào mùa hè.",
+        "correct": false
+      },
+      {
+        "text": "Vì hoa kèn hồng là biểu tượng của TP Mỹ Tho.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt Nam đặt mục tiêu một triệu sinh viên ngành STEM năm 2030",
     "content": "Việt Nam đặt mục tiêu đạt một triệu sinh viên theo học các ngành STEM vào năm 2030, theo thông báo của Bộ trưởng Giáo dục và Đào tạo Nguyễn Kim Sơn. Mặc dù hiện tại tỷ lệ sinh viên theo học các ngành STEM chỉ khoảng 28-30%, chính phủ đang có kế hoạch phát triển nguồn nhân lực chất lượng cao trong lĩnh vực này để đáp ứng nhu cầu phát triển kinh tế xã hội. Các chính sách khuyến khích và hỗ trợ học bổng sẽ được triển khai nhằm thu hút sinh viên tham gia vào các lĩnh vực khoa học, công nghệ, kỹ thuật và toán học.",
     "link": "https://vnexpress.net/viet-nam-dat-muc-tieu-mot-trieu-sinh-vien-nganh-stem-nam-2030-4865280.html",
@@ -1400,33 +1454,6 @@
     ]
   },
   {
-    "title": "Mụn lưng có thể chữa khỏi không?",
-    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
-    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mụn lưng có thể chữa khỏi được không?",
-    "answers": [
-      {
-        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, mụn lưng không bao giờ khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
     "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
     "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
@@ -1449,6 +1476,33 @@
       },
       {
         "text": "Để giảm tiếng ồn trong xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
@@ -2250,33 +2304,6 @@
     ]
   },
   {
-    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
-    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
-    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
-    "answers": [
-      {
-        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
-        "correct": true
-      },
-      {
-        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
-        "correct": false
-      },
-      {
-        "text": "Vì giải chạy có nhiều runner tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
     "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
     "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
@@ -2299,6 +2326,33 @@
       },
       {
         "text": "Mì tôm, snack, kẹo",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
+    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
+    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
+    "answers": [
+      {
+        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
+        "correct": true
+      },
+      {
+        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
+        "correct": false
+      },
+      {
+        "text": "Vì giải chạy có nhiều runner tham gia.",
+        "correct": false
+      },
+      {
+        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
         "correct": false
       }
     ]
@@ -3131,33 +3185,6 @@
     ]
   },
   {
-    "title": "4 hiểu lầm thường gặp về đường",
-    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
-    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
-    "answers": [
-      {
-        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
-        "correct": true
-      },
-      {
-        "text": "Đường tự nhiên không gây hại cho sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -3180,6 +3207,33 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 hiểu lầm thường gặp về đường",
+    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
+    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
+    "answers": [
+      {
+        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
+        "correct": true
+      },
+      {
+        "text": "Đường tự nhiên không gây hại cho sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
         "correct": false
       }
     ]
