--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -162,6 +162,33 @@
     ]
   },
   {
+    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
+    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
+    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Mở rộng thị trường sang các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá xe cho khách hàng.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường quảng cáo sản phẩm mới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Rộ tin F-16 Ukraine bị Nga bắn hạ: Vũ khí \"sấm to, mưa nhỏ\"?",
     "content": "Ukraine đã phủ nhận thông tin về việc một chiếc F-16 của không quân nước này bị Nga bắn hạ ở tỉnh Sumy. Mặc dù có video ghi lại cảnh chiếc F-16 bay thấp gần biên giới Nga, Kiev khẳng định đây là một mánh khóe tuyên truyền của Nga. Tổng thống Zelensky cho biết không có chiếc F-16 nào bị bắn hạ và nhiều chiếc F-16 mới đã đến Ukraine.",
     "link": "https://dantri.com.vn/the-gioi/ro-tin-f-16-ukraine-bi-nga-ban-ha-vu-khi-sam-to-mua-nho-20250324150754647.htm",
@@ -340,28 +367,28 @@
     ]
   },
   {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
     "answers": [
       {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
         "correct": true
       },
       {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
+        "text": "Chỉ người dân mới được hưởng lợi.",
         "correct": false
       },
       {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
         "correct": false
       },
       {
-        "text": "Anh ấy không làm gì cả.",
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
         "correct": false
       }
     ]
@@ -425,28 +452,28 @@
     ]
   },
   {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
+    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
+    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
     "answers": [
       {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
         "correct": true
       },
       {
-        "text": "Chỉ người dân mới được hưởng lợi.",
+        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
         "correct": false
       },
       {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "text": "Vì phim không đạt được rating cao.",
         "correct": false
       },
       {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "text": "Vì anh không hợp với vai diễn.",
         "correct": false
       }
     ]
@@ -479,28 +506,28 @@
     ]
   },
   {
-    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
-    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
-    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
-    "cat": "giai-tri",
-    "positivity": 5,
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
     "importance": 7,
-    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
     "answers": [
       {
-        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
         "correct": true
       },
       {
-        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
         "correct": false
       },
       {
-        "text": "Vì phim không đạt được rating cao.",
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
         "correct": false
       },
       {
-        "text": "Vì anh không hợp với vai diễn.",
+        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
